--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sudoku</title>
+        <title>Sudoku Game</title>
         <link rel="stylesheet" href="font-awesome/css/all.min.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="Assets/favicons/favicon.png" type="image/png" sizes="32x32">
     </head>
     <body>
         <main>
