updated game messages

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="game-container">
                 <div class="overlay">
                     <div>
-                        Game Over
-                        <p> Press New Game Button </p>
+                        <p class="game-message"></p>  <!-- Initially empty -->
+                        <p></p>  <!-- Initially empty -->
                     </div>
                 </div>
                 <div class="game-info-and-board">
