updated color theme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <header>
-                <h1 class="game-name">Sudoku.</h1>
+                <h1 class="game-name">Sudoku Game</h1>
                 <button class="new-game">
                     New Game
                     <div class="select-difficulty">
